# tickertape-api-client

./: LICENSE  README.md  discovered_endpoints.json  discovered_endpoints_inventory.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: endpoints.md  index.md  screener-filters.md
scripts/: generate_otp.py  intercept_portfolio.py  test_curl_cffi.py
src/tickertape_api/: __init__.py  auth_capture.py  cli.py  client.py  credentials_store.py  exceptions.py  ohlc.py  portfolio_client.py  rate_limiter.py  types.py
tests/: test_auth_capture.py  test_cli.py  test_client.py  test_credentials_store.py  test_ohlc_splits.py  test_portfolio_client.py
