[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tickertape-api-client"
version = "0.1.1"
description = "Typed Python client for public Tickertape web endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sahil Goel"}]
keywords = ["tickertape", "stocks", "mutual-funds", "market-data", "india", "us-stocks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.25,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "respx>=0.21", "ruff>=0.6", "mypy>=1.8", "build>=1.2", "twine>=5"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
auth = ["playwright>=1.45"]
portfolio = ["curl-cffi>=0.7"]

[project.urls]
Homepage = "https://github.com/The-Great-One/tickertape-api-client"
Documentation = "https://github.com/The-Great-One/tickertape-api-client#readme"
Source = "https://github.com/The-Great-One/tickertape-api-client"
Issues = "https://github.com/The-Great-One/tickertape-api-client/issues"

[project.scripts]
tickertape = "tickertape_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tickertape_api"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["tickertape_api"]

[[tool.mypy.overrides]]
module = "cloakbrowser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "curl_cffi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=tickertape_api --cov-report=term-missing"
testpaths = ["tests"]
